# ricart-argawala-algorithm-davliang

./: README.md  main.py  main_qt.py  pyproject.toml
.github/workflows/: release.yml
configs/: README.md  config_nodes_5.json
